<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/green_background"
    tools:context=".BoredFragment">


    <TextView
        android:id="@+id/titlePainter"
        style="@style/titles"
        android:layout_marginTop="@dimen/margins_top_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:textColor="@color/green_titles"
        android:text="@string/guessThePainter" />

    <ImageView
        android:id="@+id/painting"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:src="@drawable/modigliani"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/showAnswer"
        style="@style/show_answer"
        android:layout_marginBottom="80dp"
        android:text="@string/showAnswer" />

    <TextView
        android:id="@+id/back"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/back_text" />

</LinearLayout>